--- a/localization-generator/build.gradle
+++ b/localization-generator/build.gradle
@@ -6,6 +6,10 @@ repositories {
     mavenCentral()
 }
 
+kotlin {
+    jvmToolchain(8)
+}
+
 dependencies {
     implementation 'com.google.devtools.ksp:symbol-processing-api:1.8.0-1.0.9'
     implementation 'com.squareup:kotlinpoet:1.12.0'
